parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> <empty>
Rule 4     instruction -> { instructions }
Rule 5     instruction -> IF ( condition ) instruction
Rule 6     instruction -> IF ( condition ) instruction ELSE instruction
Rule 7     instruction -> FOR variable = range instruction
Rule 8     instruction -> WHILE ( condition ) instruction
Rule 9     condition -> expression EQ expression
Rule 10    condition -> expression NEQ expression
Rule 11    condition -> expression LTE expression
Rule 12    condition -> expression GTE expression
Rule 13    condition -> expression < expression
Rule 14    condition -> expression > expression
Rule 15    variable -> ID
Rule 16    range -> expression : expression
Rule 17    instruction -> statement ;
Rule 18    statement -> BREAK
Rule 19    statement -> CONTINUE
Rule 20    statement -> RETURN
Rule 21    statement -> RETURN expression
Rule 22    statement -> PRINT expression_list
Rule 23    statement -> lvalue = expression
Rule 24    statement -> lvalue ADDASSIGN expression
Rule 25    statement -> lvalue SUBASSIGN expression
Rule 26    statement -> lvalue MULASSIGN expression
Rule 27    statement -> lvalue DIVASSIGN expression
Rule 28    lvalue -> variable
Rule 29    lvalue -> variable [ expression_list ]
Rule 30    expression -> expression + expression
Rule 31    expression -> expression - expression
Rule 32    expression -> expression * expression
Rule 33    expression -> expression / expression
Rule 34    expression -> expression DOTADD expression
Rule 35    expression -> expression DOTSUB expression
Rule 36    expression -> expression DOTMUL expression
Rule 37    expression -> expression DOTDIV expression
Rule 38    expression -> - expression
Rule 39    expression -> expression '
Rule 40    expression -> ( expression )
Rule 41    expression -> lvalue
Rule 42    expression -> INTNUM
Rule 43    expression -> FLOATNUM
Rule 44    expression -> STRING
Rule 45    expression_list -> expression_list , expression
Rule 46    expression_list -> expression
Rule 47    expression_list -> <empty>
Rule 48    expression -> [ expression_list ]
Rule 49    expression -> EYE ( expression )
Rule 50    expression -> EYE ( expression , expression )
Rule 51    expression -> ZEROS ( expression )
Rule 52    expression -> ZEROS ( expression , expression )
Rule 53    expression -> ONES ( expression )
Rule 54    expression -> ONES ( expression , expression )

Terminals, with rules where they appear

'                    : 39
(                    : 5 6 8 40 49 50 51 52 53 54
)                    : 5 6 8 40 49 50 51 52 53 54
*                    : 32
+                    : 30
,                    : 45 50 52 54
-                    : 31 38
/                    : 33
:                    : 16
;                    : 17
<                    : 13
=                    : 7 23
>                    : 14
ADDASSIGN            : 24
BREAK                : 18
CONTINUE             : 19
DIVASSIGN            : 27
DOTADD               : 34
DOTDIV               : 37
DOTMUL               : 36
DOTSUB               : 35
ELSE                 : 6
EQ                   : 9
EYE                  : 49 50
FLOATNUM             : 43
FOR                  : 7
GTE                  : 12
ID                   : 15
IF                   : 5 6
INTNUM               : 42
LTE                  : 11
MULASSIGN            : 26
NEQ                  : 10
ONES                 : 53 54
PRINT                : 22
RETURN               : 20 21
STRING               : 44
SUBASSIGN            : 25
WHILE                : 8
ZEROS                : 51 52
[                    : 29 48
]                    : 29 48
error                : 
{                    : 4
}                    : 4

Nonterminals, with rules where they appear

condition            : 5 6 8
expression           : 9 9 10 10 11 11 12 12 13 13 14 14 16 16 21 23 24 25 26 27 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 39 40 45 46 49 50 50 51 52 52 53 54 54
expression_list      : 22 29 45 48
instruction          : 2 5 6 6 7 8
instructions         : 1 2 4
lvalue               : 23 24 25 26 27 41
program              : 0
range                : 7
statement            : 17
variable             : 7 28 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> .

    {               reduce using rule 3 (instructions -> .)
    IF              reduce using rule 3 (instructions -> .)
    FOR             reduce using rule 3 (instructions -> .)
    WHILE           reduce using rule 3 (instructions -> .)
    BREAK           reduce using rule 3 (instructions -> .)
    CONTINUE        reduce using rule 3 (instructions -> .)
    RETURN          reduce using rule 3 (instructions -> .)
    PRINT           reduce using rule 3 (instructions -> .)
    ID              reduce using rule 3 (instructions -> .)
    $end            reduce using rule 3 (instructions -> .)

    program                        shift and go to state 1
    instructions                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . { instructions }
    (5) instruction -> . IF ( condition ) instruction
    (6) instruction -> . IF ( condition ) instruction ELSE instruction
    (7) instruction -> . FOR variable = range instruction
    (8) instruction -> . WHILE ( condition ) instruction
    (17) instruction -> . statement ;
    (18) statement -> . BREAK
    (19) statement -> . CONTINUE
    (20) statement -> . RETURN
    (21) statement -> . RETURN expression
    (22) statement -> . PRINT expression_list
    (23) statement -> . lvalue = expression
    (24) statement -> . lvalue ADDASSIGN expression
    (25) statement -> . lvalue SUBASSIGN expression
    (26) statement -> . lvalue MULASSIGN expression
    (27) statement -> . lvalue DIVASSIGN expression
    (28) lvalue -> . variable
    (29) lvalue -> . variable [ expression_list ]
    (15) variable -> . ID

    $end            reduce using rule 1 (program -> instructions .)
    {               shift and go to state 4
    IF              shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 15

    instruction                    shift and go to state 3
    variable                       shift and go to state 7
    statement                      shift and go to state 9
    lvalue                         shift and go to state 14

state 3

    (2) instructions -> instructions instruction .

    {               reduce using rule 2 (instructions -> instructions instruction .)
    IF              reduce using rule 2 (instructions -> instructions instruction .)
    FOR             reduce using rule 2 (instructions -> instructions instruction .)
    WHILE           reduce using rule 2 (instructions -> instructions instruction .)
    BREAK           reduce using rule 2 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 2 (instructions -> instructions instruction .)
    RETURN          reduce using rule 2 (instructions -> instructions instruction .)
    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    }               reduce using rule 2 (instructions -> instructions instruction .)


state 4

    (4) instruction -> { . instructions }
    (2) instructions -> . instructions instruction
    (3) instructions -> .

    }               reduce using rule 3 (instructions -> .)
    {               reduce using rule 3 (instructions -> .)
    IF              reduce using rule 3 (instructions -> .)
    FOR             reduce using rule 3 (instructions -> .)
    WHILE           reduce using rule 3 (instructions -> .)
    BREAK           reduce using rule 3 (instructions -> .)
    CONTINUE        reduce using rule 3 (instructions -> .)
    RETURN          reduce using rule 3 (instructions -> .)
    PRINT           reduce using rule 3 (instructions -> .)
    ID              reduce using rule 3 (instructions -> .)

    instructions                   shift and go to state 16

state 5

    (5) instruction -> IF . ( condition ) instruction
    (6) instruction -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 17


state 6

    (7) instruction -> FOR . variable = range instruction
    (15) variable -> . ID

    ID              shift and go to state 15

    variable                       shift and go to state 18

state 7

    (28) lvalue -> variable .
    (29) lvalue -> variable . [ expression_list ]

    =               reduce using rule 28 (lvalue -> variable .)
    ADDASSIGN       reduce using rule 28 (lvalue -> variable .)
    SUBASSIGN       reduce using rule 28 (lvalue -> variable .)
    MULASSIGN       reduce using rule 28 (lvalue -> variable .)
    DIVASSIGN       reduce using rule 28 (lvalue -> variable .)
    +               reduce using rule 28 (lvalue -> variable .)
    -               reduce using rule 28 (lvalue -> variable .)
    *               reduce using rule 28 (lvalue -> variable .)
    /               reduce using rule 28 (lvalue -> variable .)
    DOTADD          reduce using rule 28 (lvalue -> variable .)
    DOTSUB          reduce using rule 28 (lvalue -> variable .)
    DOTMUL          reduce using rule 28 (lvalue -> variable .)
    DOTDIV          reduce using rule 28 (lvalue -> variable .)
    '               reduce using rule 28 (lvalue -> variable .)
    ;               reduce using rule 28 (lvalue -> variable .)
    ,               reduce using rule 28 (lvalue -> variable .)
    EQ              reduce using rule 28 (lvalue -> variable .)
    NEQ             reduce using rule 28 (lvalue -> variable .)
    LTE             reduce using rule 28 (lvalue -> variable .)
    GTE             reduce using rule 28 (lvalue -> variable .)
    <               reduce using rule 28 (lvalue -> variable .)
    >               reduce using rule 28 (lvalue -> variable .)
    ]               reduce using rule 28 (lvalue -> variable .)
    )               reduce using rule 28 (lvalue -> variable .)
    :               reduce using rule 28 (lvalue -> variable .)
    {               reduce using rule 28 (lvalue -> variable .)
    IF              reduce using rule 28 (lvalue -> variable .)
    FOR             reduce using rule 28 (lvalue -> variable .)
    WHILE           reduce using rule 28 (lvalue -> variable .)
    BREAK           reduce using rule 28 (lvalue -> variable .)
    CONTINUE        reduce using rule 28 (lvalue -> variable .)
    RETURN          reduce using rule 28 (lvalue -> variable .)
    PRINT           reduce using rule 28 (lvalue -> variable .)
    ID              reduce using rule 28 (lvalue -> variable .)
    [               shift and go to state 19


state 8

    (8) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 20


state 9

    (17) instruction -> statement . ;

    ;               shift and go to state 21


state 10

    (18) statement -> BREAK .

    ;               reduce using rule 18 (statement -> BREAK .)


state 11

    (19) statement -> CONTINUE .

    ;               reduce using rule 19 (statement -> CONTINUE .)


state 12

    (20) statement -> RETURN .
    (21) statement -> RETURN . expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression DOTADD expression
    (35) expression -> . expression DOTSUB expression
    (36) expression -> . expression DOTMUL expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . - expression
    (39) expression -> . expression '
    (40) expression -> . ( expression )
    (41) expression -> . lvalue
    (42) expression -> . INTNUM
    (43) expression -> . FLOATNUM
    (44) expression -> . STRING
    (48) expression -> . [ expression_list ]
    (49) expression -> . EYE ( expression )
    (50) expression -> . EYE ( expression , expression )
    (51) expression -> . ZEROS ( expression )
    (52) expression -> . ZEROS ( expression , expression )
    (53) expression -> . ONES ( expression )
    (54) expression -> . ONES ( expression , expression )
    (28) lvalue -> . variable
    (29) lvalue -> . variable [ expression_list ]
    (15) variable -> . ID

    ;               reduce using rule 20 (statement -> RETURN .)
    -               shift and go to state 23
    (               shift and go to state 24
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27
    STRING          shift and go to state 28
    [               shift and go to state 29
    EYE             shift and go to state 30
    ZEROS           shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 15

    expression                     shift and go to state 22
    lvalue                         shift and go to state 25
    variable                       shift and go to state 7

state 13

    (22) statement -> PRINT . expression_list
    (45) expression_list -> . expression_list , expression
    (46) expression_list -> . expression
    (47) expression_list -> .
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression DOTADD expression
    (35) expression -> . expression DOTSUB expression
    (36) expression -> . expression DOTMUL expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . - expression
    (39) expression -> . expression '
    (40) expression -> . ( expression )
    (41) expression -> . lvalue
    (42) expression -> . INTNUM
    (43) expression -> . FLOATNUM
    (44) expression -> . STRING
    (48) expression -> . [ expression_list ]
    (49) expression -> . EYE ( expression )
    (50) expression -> . EYE ( expression , expression )
    (51) expression -> . ZEROS ( expression )
    (52) expression -> . ZEROS ( expression , expression )
    (53) expression -> . ONES ( expression )
    (54) expression -> . ONES ( expression , expression )
    (28) lvalue -> . variable
    (29) lvalue -> . variable [ expression_list ]
    (15) variable -> . ID

    ,               reduce using rule 47 (expression_list -> .)
    ;               reduce using rule 47 (expression_list -> .)
    -               shift and go to state 23
    (               shift and go to state 24
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27
    STRING          shift and go to state 28
    [               shift and go to state 29
    EYE             shift and go to state 30
    ZEROS           shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 15

    expression_list                shift and go to state 33
    expression                     shift and go to state 34
    lvalue                         shift and go to state 25
    variable                       shift and go to state 7

state 14

    (23) statement -> lvalue . = expression
    (24) statement -> lvalue . ADDASSIGN expression
    (25) statement -> lvalue . SUBASSIGN expression
    (26) statement -> lvalue . MULASSIGN expression
    (27) statement -> lvalue . DIVASSIGN expression

    =               shift and go to state 35
    ADDASSIGN       shift and go to state 36
    SUBASSIGN       shift and go to state 37
    MULASSIGN       shift and go to state 38
    DIVASSIGN       shift and go to state 39


state 15

    (15) variable -> ID .

    [               reduce using rule 15 (variable -> ID .)
    =               reduce using rule 15 (variable -> ID .)
    ADDASSIGN       reduce using rule 15 (variable -> ID .)
    SUBASSIGN       reduce using rule 15 (variable -> ID .)
    MULASSIGN       reduce using rule 15 (variable -> ID .)
    DIVASSIGN       reduce using rule 15 (variable -> ID .)
    +               reduce using rule 15 (variable -> ID .)
    -               reduce using rule 15 (variable -> ID .)
    *               reduce using rule 15 (variable -> ID .)
    /               reduce using rule 15 (variable -> ID .)
    DOTADD          reduce using rule 15 (variable -> ID .)
    DOTSUB          reduce using rule 15 (variable -> ID .)
    DOTMUL          reduce using rule 15 (variable -> ID .)
    DOTDIV          reduce using rule 15 (variable -> ID .)
    '               reduce using rule 15 (variable -> ID .)
    ;               reduce using rule 15 (variable -> ID .)
    ,               reduce using rule 15 (variable -> ID .)
    EQ              reduce using rule 15 (variable -> ID .)
    NEQ             reduce using rule 15 (variable -> ID .)
    LTE             reduce using rule 15 (variable -> ID .)
    GTE             reduce using rule 15 (variable -> ID .)
    <               reduce using rule 15 (variable -> ID .)
    >               reduce using rule 15 (variable -> ID .)
    ]               reduce using rule 15 (variable -> ID .)
    )               reduce using rule 15 (variable -> ID .)
    :               reduce using rule 15 (variable -> ID .)
    {               reduce using rule 15 (variable -> ID .)
    IF              reduce using rule 15 (variable -> ID .)
    FOR             reduce using rule 15 (variable -> ID .)
    WHILE           reduce using rule 15 (variable -> ID .)
    BREAK           reduce using rule 15 (variable -> ID .)
    CONTINUE        reduce using rule 15 (variable -> ID .)
    RETURN          reduce using rule 15 (variable -> ID .)
    PRINT           reduce using rule 15 (variable -> ID .)
    ID              reduce using rule 15 (variable -> ID .)


state 16

    (4) instruction -> { instructions . }
    (2) instructions -> instructions . instruction
    (4) instruction -> . { instructions }
    (5) instruction -> . IF ( condition ) instruction
    (6) instruction -> . IF ( condition ) instruction ELSE instruction
    (7) instruction -> . FOR variable = range instruction
    (8) instruction -> . WHILE ( condition ) instruction
    (17) instruction -> . statement ;
    (18) statement -> . BREAK
    (19) statement -> . CONTINUE
    (20) statement -> . RETURN
    (21) statement -> . RETURN expression
    (22) statement -> . PRINT expression_list
    (23) statement -> . lvalue = expression
    (24) statement -> . lvalue ADDASSIGN expression
    (25) statement -> . lvalue SUBASSIGN expression
    (26) statement -> . lvalue MULASSIGN expression
    (27) statement -> . lvalue DIVASSIGN expression
    (28) lvalue -> . variable
    (29) lvalue -> . variable [ expression_list ]
    (15) variable -> . ID

    }               shift and go to state 40
    {               shift and go to state 4
    IF              shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 15

    instruction                    shift and go to state 3
    variable                       shift and go to state 7
    statement                      shift and go to state 9
    lvalue                         shift and go to state 14

state 17

    (5) instruction -> IF ( . condition ) instruction
    (6) instruction -> IF ( . condition ) instruction ELSE instruction
    (9) condition -> . expression EQ expression
    (10) condition -> . expression NEQ expression
    (11) condition -> . expression LTE expression
    (12) condition -> . expression GTE expression
    (13) condition -> . expression < expression
    (14) condition -> . expression > expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression DOTADD expression
    (35) expression -> . expression DOTSUB expression
    (36) expression -> . expression DOTMUL expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . - expression
    (39) expression -> . expression '
    (40) expression -> . ( expression )
    (41) expression -> . lvalue
    (42) expression -> . INTNUM
    (43) expression -> . FLOATNUM
    (44) expression -> . STRING
    (48) expression -> . [ expression_list ]
    (49) expression -> . EYE ( expression )
    (50) expression -> . EYE ( expression , expression )
    (51) expression -> . ZEROS ( expression )
    (52) expression -> . ZEROS ( expression , expression )
    (53) expression -> . ONES ( expression )
    (54) expression -> . ONES ( expression , expression )
    (28) lvalue -> . variable
    (29) lvalue -> . variable [ expression_list ]
    (15) variable -> . ID

    -               shift and go to state 23
    (               shift and go to state 24
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27
    STRING          shift and go to state 28
    [               shift and go to state 29
    EYE             shift and go to state 30
    ZEROS           shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 15

    condition                      shift and go to state 41
    expression                     shift and go to state 42
    lvalue                         shift and go to state 25
    variable                       shift and go to state 7

state 18

    (7) instruction -> FOR variable . = range instruction

    =               shift and go to state 43


state 19

    (29) lvalue -> variable [ . expression_list ]
    (45) expression_list -> . expression_list , expression
    (46) expression_list -> . expression
    (47) expression_list -> .
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression DOTADD expression
    (35) expression -> . expression DOTSUB expression
    (36) expression -> . expression DOTMUL expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . - expression
    (39) expression -> . expression '
    (40) expression -> . ( expression )
    (41) expression -> . lvalue
    (42) expression -> . INTNUM
    (43) expression -> . FLOATNUM
    (44) expression -> . STRING
    (48) expression -> . [ expression_list ]
    (49) expression -> . EYE ( expression )
    (50) expression -> . EYE ( expression , expression )
    (51) expression -> . ZEROS ( expression )
    (52) expression -> . ZEROS ( expression , expression )
    (53) expression -> . ONES ( expression )
    (54) expression -> . ONES ( expression , expression )
    (28) lvalue -> . variable
    (29) lvalue -> . variable [ expression_list ]
    (15) variable -> . ID

    ]               reduce using rule 47 (expression_list -> .)
    ,               reduce using rule 47 (expression_list -> .)
    -               shift and go to state 23
    (               shift and go to state 24
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27
    STRING          shift and go to state 28
    [               shift and go to state 29
    EYE             shift and go to state 30
    ZEROS           shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 15

    variable                       shift and go to state 7
    expression_list                shift and go to state 44
    expression                     shift and go to state 34
    lvalue                         shift and go to state 25

state 20

    (8) instruction -> WHILE ( . condition ) instruction
    (9) condition -> . expression EQ expression
    (10) condition -> . expression NEQ expression
    (11) condition -> . expression LTE expression
    (12) condition -> . expression GTE expression
    (13) condition -> . expression < expression
    (14) condition -> . expression > expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression DOTADD expression
    (35) expression -> . expression DOTSUB expression
    (36) expression -> . expression DOTMUL expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . - expression
    (39) expression -> . expression '
    (40) expression -> . ( expression )
    (41) expression -> . lvalue
    (42) expression -> . INTNUM
    (43) expression -> . FLOATNUM
    (44) expression -> . STRING
    (48) expression -> . [ expression_list ]
    (49) expression -> . EYE ( expression )
    (50) expression -> . EYE ( expression , expression )
    (51) expression -> . ZEROS ( expression )
    (52) expression -> . ZEROS ( expression , expression )
    (53) expression -> . ONES ( expression )
    (54) expression -> . ONES ( expression , expression )
    (28) lvalue -> . variable
    (29) lvalue -> . variable [ expression_list ]
    (15) variable -> . ID

    -               shift and go to state 23
    (               shift and go to state 24
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27
    STRING          shift and go to state 28
    [               shift and go to state 29
    EYE             shift and go to state 30
    ZEROS           shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 15

    condition                      shift and go to state 45
    expression                     shift and go to state 42
    lvalue                         shift and go to state 25
    variable                       shift and go to state 7

state 21

    (17) instruction -> statement ; .

    {               reduce using rule 17 (instruction -> statement ; .)
    IF              reduce using rule 17 (instruction -> statement ; .)
    FOR             reduce using rule 17 (instruction -> statement ; .)
    WHILE           reduce using rule 17 (instruction -> statement ; .)
    BREAK           reduce using rule 17 (instruction -> statement ; .)
    CONTINUE        reduce using rule 17 (instruction -> statement ; .)
    RETURN          reduce using rule 17 (instruction -> statement ; .)
    PRINT           reduce using rule 17 (instruction -> statement ; .)
    ID              reduce using rule 17 (instruction -> statement ; .)
    $end            reduce using rule 17 (instruction -> statement ; .)
    }               reduce using rule 17 (instruction -> statement ; .)
    ELSE            reduce using rule 17 (instruction -> statement ; .)


state 22

    (21) statement -> RETURN expression .
    (30) expression -> expression . + expression
    (31) expression -> expression . - expression
    (32) expression -> expression . * expression
    (33) expression -> expression . / expression
    (34) expression -> expression . DOTADD expression
    (35) expression -> expression . DOTSUB expression
    (36) expression -> expression . DOTMUL expression
    (37) expression -> expression . DOTDIV expression
    (39) expression -> expression . '

    ;               reduce using rule 21 (statement -> RETURN expression .)
    +               shift and go to state 46
    -               shift and go to state 47
    *               shift and go to state 48
    /               shift and go to state 49
    DOTADD          shift and go to state 50
    DOTSUB          shift and go to state 51
    DOTMUL          shift and go to state 52
    DOTDIV          shift and go to state 53
    '               shift and go to state 54


state 23

    (38) expression -> - . expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression DOTADD expression
    (35) expression -> . expression DOTSUB expression
    (36) expression -> . expression DOTMUL expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . - expression
    (39) expression -> . expression '
    (40) expression -> . ( expression )
    (41) expression -> . lvalue
    (42) expression -> . INTNUM
    (43) expression -> . FLOATNUM
    (44) expression -> . STRING
    (48) expression -> . [ expression_list ]
    (49) expression -> . EYE ( expression )
    (50) expression -> . EYE ( expression , expression )
    (51) expression -> . ZEROS ( expression )
    (52) expression -> . ZEROS ( expression , expression )
    (53) expression -> . ONES ( expression )
    (54) expression -> . ONES ( expression , expression )
    (28) lvalue -> . variable
    (29) lvalue -> . variable [ expression_list ]
    (15) variable -> . ID

    -               shift and go to state 23
    (               shift and go to state 24
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27
    STRING          shift and go to state 28
    [               shift and go to state 29
    EYE             shift and go to state 30
    ZEROS           shift and go to state 31
    ONES            shift and go to state 32
    ID              shift and go to state 15

    expression                     shift and go to state 55
    lvalue                         shift and go to state 25
    variable                       shift and go to state 7

state 24

    (40) expression -> ( . expression )
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression DOTADD expression
    (35) expression -> . expression DOTSUB expression
    (36) expression -> . expression DOTMUL expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . - expression
    (39) expression -> . expression '
    (40) expression -> . ( expression )
    (41) expression -> . lvalue
    (42) expression -> . INTNUM
    (43) expression -> . FLOATNUM
    (44) expression -> . STRING
    (48) expression -> . [ expression_list ]
    (49) expression -> . EYE ( expression )
    (50) expression -> . EYE ( expression , expression )
    (51) expression -> . ZEROS ( expression )
    (52) expression -> . ZEROS ( expression , expression )
    (53) expression -> . ONES ( expression )
    (54) expression -> . ONES ( expression , expression )
    (28) lvalue -> . variable
    (29) lvalue -> . variable [ expression_list ]
    (15) variable -> . ID

    -               shift and go to state 23
    (               shift and go to state 24
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27
    STRING          shift and go to state 28
    [               shift and go to state 29
    EYE             shift and go to state 30
    ZEROS           shift and go to state 31
    ONES            shift and go to state 32
